# euroc_stage_2

./: .gitignore  QUICKSTART.md  README.md  doxygen.config  ethzasl_mav_interface_plugins.xml  package.xml
asctec_communication_interface/: CMakeLists.txt  README.md  package.xml
asctec_communication_interface/include/aci/: aci.h  raw_buffer.h  simple_time_synchronizer.h  timesync_base.h  uart.h  variable_defines_autopilot.h  variable_defines_trinity.h
asctec_communication_interface/src/lib/: aci.cpp  asctecCommIntf.c  simple_time_synchronizer.cpp  timesync_base.cpp  uart.cpp
asctec_communication_interface/src/nodes/: example_node.cpp
asctec_communication_interface/src/test/: CMakeLists.txt  test_misc.cpp  test_time_synchronization.cpp
ethzasl_mav_interface/: CMakeLists.txt  package.xml
ethzasl_mav_interface/include/ethzasl_mav_interface/: attitude_command_subscriber_trinity.h  common.h  common_data_publisher_autopilot.h  common_data_publisher_trinity.h  helper.h  mav_interface.h
ethzasl_mav_interface/src/lib/: CMakeLists.txt  attitude_command_subscriber_trinity.cpp  common_data_publisher_trinity.cpp  mav_interface.cpp
ethzasl_mav_interface/src/node/: CMakeLists.txt  node.cpp
ethzasl_mav_interface/src/nodelet/: CMakeLists.txt
ethzasl_mav_interface/src/test/: test_rotations.cpp
euroc_launch/: CMakeLists.txt  package.xml
euroc_launch/launch/: bluebird.launch  mav_saver.launch  msf_parameters_marker_soft.yaml  neo.launch  neo2.launch  neo_ETH_benchmark.launch  neo_ETH_with_arms.launch  neo_aerial_manipulator.launch  neo_euroc_showcase.launch  neo_freestyle_clanak.launch  neo_pozyx.launch  okvis.launch  optitrack.launch  optitrack2.launch  vicon.launch
euroc_launch/launch/test/: calibrate_imu.launch  okvis.launch  visensor.launch
euroc_launch/parameters/bluebird/: mav_interface.yaml  okvis_cameras.yaml
euroc_launch/parameters/common/: linear_mpc_neo.yaml  msf_parameters_okvis.yaml  msf_parameters_vicon.yaml  okvis_cameras.yaml  rovio_filter.info  visensor.yaml
euroc_launch/parameters/euroc1/: okvis_cameras.yaml  p23025_camchain.yaml  p23025_camchain_radtan.yaml  rovio_equidist_cam0.yaml
euroc_launch/parameters/euroc2/: mav_interface.yaml  msf_parameters_okvis.yaml  okvis_cameras.yaml  p23029_camchain.yaml  p23029_camchain_radtan.yaml  rovio_equidist_cam0.yaml
euroc_launch/parameters/euroc3/: dual_manipulator.yaml  mav_interface.yaml  msf_parameters_marker.yaml  msf_parameters_marker_soft.yaml  msf_parameters_soft.yaml  okvis_cameras.yaml  p23027_camchain.yaml  p23027_camchain_radtan.yaml  rovio_equidist_cam0.yaml
euroc_launch/parameters/euroc4/: okvis_cameras.yaml  p23030_camchain.yaml  p23030_camchain_radtan.yaml  rovio_equidist_cam0.yaml
euroc_launch/parameters/euroc5/: okvis_cameras.yaml  p23028_camchain.yaml  p23028_camchain_radtan.yaml  rovio_equidist_cam0.yaml
euroc_launch/parameters/euroc6/: linear_mpc.yaml  mav_interface.yaml  msf_parameters_okvis.yaml  okvis_cameras.yaml  p23026_camchain.yaml  p23026_camchain_radtan.yaml  rovio_equidist_cam0.yaml
euroc_stage_2/: CMakeLists.txt  package.xml
euroc_stage_2_evaluation/euroc_stage2_common/: CMakeLists.txt  package.xml
euroc_stage_2_evaluation/euroc_stage2_common/src/: csv_parser.cpp  trajectory_evaluator.cpp  waypoint.cpp
euroc_stage_2_evaluation/euroc_task1/: CMakeLists.txt  package.xml
euroc_stage_2_evaluation/euroc_task1/launch/: eval_task1_real.launch  eval_task1_rotors.launch
euroc_stage_2_evaluation/euroc_task1/src/: task1_eval.cpp  task1_eval_node.cpp
euroc_stage_2_evaluation/euroc_task1/viz/: task1_rviz.rviz
euroc_stage_2_evaluation/euroc_task2/: package.xml
euroc_stage_2_evaluation/euroc_task3/: CMakeLists.txt  package.xml
euroc_stage_2_evaluation/euroc_task4/: CMakeLists.txt  package.xml
euroc_stage_2_evaluation/euroc_task5/: package.xml
euroc_stage_2_evaluation/euroc_vicon_transmission/: CMakeLists.txt
euroc_stage_2_simulation/euroc_hex_description/: package.xml
euroc_task2/: CMakeLists.txt
euroc_task2/launch/: eval_task2_real.launch  eval_task2_real_wind.launch
euroc_task2/res/: task2_real.txt
euroc_task2/src/: task2_eval.cpp  task2_server.cpp
euroc_task2/viz/: task2_rviz.rviz
euroc_task5/: CMakeLists.txt
euroc_task5/launch/: spawn_wall.launch  task5_evaluation.launch
euroc_task5/src/: scan_rectangle.py  simulation_example_node.py  task5_evaluation_node.py
euroc_vicon_transmission/: README.md  package.xml
euroc_vicon_transmission/src/: chatter.cpp  client_socket.cpp  socket.cpp  vicon_pub.cpp  vicon_transmitter.cpp
gcs_startup/: package.xml
ground_truth_octree/: package.xml
ground_truth_octree/res/: Lee.bt  LeoC6.bt  ScaffoldB.bt
ground_truth_octree/src/: ground_truth_octree.cpp
mav_planning_utils/: CMakeLists.txt  README.md  package.xml
mav_planning_utils/cmake/: export_flags.cmake
mav_saver/: CMakeLists.txt  package.xml
mav_saver/launch/: mav_saver_real.launch  mav_saver_rotors_base.launch
mav_saver/meshes/: bbox.dae
mav_saver/res/: LeoC6.bt
mav_saver/rviz/: mav_saver.rviz
mav_saver/src/: mav_saver.cpp  mav_saver_node.cpp  safety_pose_publisher.cpp
mav_tools/: CMakeLists.txt  README.md  package.xml
mav_tools/gcs_startup/: CMakeLists.txt  mainpage.dox
mav_tools/mav_calibration/: README.md
mav_tools/mav_install/: 09_config_serial  install_all_on_uav.sh  install_eclipse.sh  install_git.sh  install_grub_hack.sh  install_heli.sh  install_ros.sh  install_wpa.sh
mav_tools/mav_startup/: CMakeLists.txt  package.xml
okvis_cv/: CMakeLists.txt  package.xml
okvis_cv/src/: NCameraSystem.cpp
okvis_kinematics/: CMakeLists.txt
okvis_time/: CMakeLists.txt  package.xml
rqt_copter/: CMakeLists.txt  package.xml  setup.py
rqt_copter/resource/: CopterPlugin.ui  FloatInputWidget.ui  IntInputWidget.ui  StringInputWidget.ui
vehicle_monitor_library/: package.xml
vehicle_monitor_library/src/: BaseConstraintChecker.cpp  BoundingVolume.cpp  CollisionConstraintChecker.cpp  EmergencyButtonConstraintChecker.cpp  MotionConstraintChecker.cpp  SimpleVelocityEstimator.cpp  Vehicle.cpp  VehicleMonitor.cpp
(+611 files in other folders)
