<?xml version="1.0"?>
<package>
  <name>aslam_install</name>
  <version>0.0.1</version>
  <description>aslam_install</description>

  <maintainer email="Paul.Furgale@mavt.ethz.ch">Paul Furgale</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  
</package>

