<?xml version="1.0"?>
<package>
  <name>asctec_communication_interface</name>
  <version>0.0.0</version>
  <description>The ethzasl_mav_interface package</description>
  
  <maintainer email="markus.achtelik_devel@mavt.ethz.ch">Markus Achtelik</maintainer>

  <license>ASL 2.0</license>

  <url type="website">https://github.com/ethz-asl/ethzasl_mav_interface</url>
  <url type="bugtracker">https://github.com/ethz-asl/ethzasl_mav_interface/issues</url>

  <author email="markus.achtelik_devel@mavt.ethz.ch">Markus Achtelik</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>eigen</build_depend>
  
  <run_depend>roscpp</run_depend>
  <!-- run_depend>cmake_modules</run_depend -->
</package>