<?xml version="1.0"?>
<package>
  <name>euroc_stage_2</name>
  <version>1.2.0</version>
  <description>Meta-package for all EUROC Stage 2 MAV packages provided to the challengers.</description>
  <maintainer email="elena.oleynikova@mavt.ethz.ch">Helen Oleynikova</maintainer>

  <license>See individual packages</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>asctec_communication_interface</run_depend>
  <run_depend>asctec_mav_framework</run_depend>
  <run_depend>catkin_simple</run_depend>
  <run_depend>ceres_catkin</run_depend>
  <run_depend>eigen_checks</run_depend>
  <run_depend>ethzasl_brisk</run_depend>
  <run_depend>ethzasl_mav_interface</run_depend>
  <run_depend>ethzasl_msf</run_depend>
  <run_depend>euroc_launch</run_depend>
  <run_depend>glog_catkin</run_depend>
  <run_depend>libvisensor</run_depend>
  <run_depend>mav_comm</run_depend>
  <run_depend>mav_control</run_depend>
  <run_depend>opencv2_catkin</run_depend>
  <run_depend>opengv</run_depend>
  <run_depend>openkvis</run_depend>
  <run_depend>ros_vrpn_client</run_depend>
  <run_depend>visensor_node</run_depend>
  <run_depend>vrpn_catkin</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
