<?xml version="1.0"?>
<package format="2">
  <name>euroc_vicon_transmission</name>
  <version>0.0.0</version>
  <description>
    A socket connection interfaced with ROS to transmit Vicon odometry from a
    seperate network to the EUROC Neo network.
  </description>

  <maintainer email="brik@student.ethz.ch">Rik Bähnemann</maintainer>

  <license>tbd</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  
</package>
