<?xml version="1.0"?>
<package format="2">
  <name>ground_truth_octree</name>
  <version>0.0.0</version>
  <description>
      Uses prescanned lidar data + vicon to generate a ground truth octree
  </description>
  <maintainer email="burrimi@ethz.ch">Michael Burri</maintainer>
  <maintainer email="ztaylor@ethz.ch">Zachary Taylor</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>octomap</depend>
  <depend>octomap_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>pcl_ros</depend>

  <depend>octomap_world</depend>

</package>
