<package>
  <name>mav_planning_utils</name>
  <version>1.0.0</version>
  <description>mav_planning_utils</description>
  <maintainer email="markus.achtelik_devel@mavt.ethz.ch">Markus Achtelik</maintainer>

  <license>BSD</license>

  <!--url type="website">http://ros.org/wiki/</url-->
  <url type="bugtracker">https://github.com/ethz-asl/ethzasl_mav_pathplanning/issues</url>

  <author>Markus Achtelik</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>planning_msgs</build_depend>
  <!--build_depend>sm_timing</build_depend-->
  <build_depend>msf_timing</build_depend>
  <build_depend>mav_viz</build_depend>
  <build_depend>mav_msgs</build_depend>
  <build_depend>nlopt</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>glog_catkin</build_depend>
  <build_depend>eigen_checks</build_depend>
  <build_depend>eigen_conversions</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>planning_msgs</run_depend>
  <!--run_depend>sm_timing</run_depend-->
  <run_depend>msf_timing</run_depend>
  <run_depend>mav_viz</run_depend>
  <run_depend>mav_msgs</run_depend>
  <run_depend>nlopt</run_depend>
  <run_depend>yaml-cpp</run_depend>
  <run_depend>glog_catkin</run_depend>
  <run_depend>eigen_checks</run_depend>
  <run_depend>eigen_conversions</run_depend>


  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>asctec_hl_comm</test_depend> -->
  <!-- <test_depend>geometry_msgs</test_depend> -->
  <!-- <test_depend>std_msgs</test_depend> -->
  <!-- <test_depend>visualization_msgs</test_depend> -->
  <!-- <test_depend>planning_msgs</test_depend> -->
  <!-- <test_depend>sm_timing</test_depend> -->

</package>
