<?xml version="1.0" encoding="utf-8"?>
<package format="2">
  <name>okvis_cv</name>
  <version>0.0.1</version>
  <description>okvis_cv</description>
  <maintainer email="s.leutenegger@imperial.ac.uk">Stefan Leutenegger</maintainer>
  <author>Stefan Leutenegger</author>
  <license>CLOSED</license>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <depend>eigen_catkin</depend>
  <depend>okvis_kinematics</depend>
  <depend>okvis_time</depend>
  <depend>okvis_util</depend>
  <depend>brisk</depend>
  <depend>opencv2_catkin</depend>
  
</package>
