<?xml version="1.0"?>
<package>
  <name>rqt_copter</name>
  <version>0.1.0</version>
  <description>The rqt_copter package privides a GUI for copter observation and debugging.</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="georgwi@student.ethz.ch">Georg Wiedebach</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>

  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <author email="georgwi@student.ethz.ch">Georg Wiedebach</author>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_py</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_fusion_comm</build_depend>
  <build_depend>asctec_hl_comm</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_fusion_comm</run_depend>
  <run_depend>asctec_hl_comm</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>