<?xml version="1.0"?>
<package>
  <name>vehicle_monitor_library</name>
  <version>0.0.0</version>
  <description>The vehicle_monitor_library package</description>

  <maintainer email="burrimi@ethz.ch">Michael Burri</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>octomap</build_depend>
  <build_depend>dynamic-edt-3d</build_depend>
  <build_depend>tf</build_depend>
  
  <run_depend>octomap</run_depend>
  <run_depend>dynamic-edt-3d</run_depend>
  <run_depend>tf</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>