<?xml version="1.0"?>
<package format="2">
  <name>euroc_task2</name>
  <version>0.0.0</version>
  <description>
      EuRoC stage2 - task 1
  </description>
  <maintainer email="burrimi@ethz.ch">Michael Burri</maintainer>
  <maintainer email="ztaylor@ethz.ch">Zachary Taylor</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>euroc_stage2_common</depend>
  <depend>geometry_msgs</depend>
  <depend>mav_msgs</depend>
  <depend>mav_planning_utils</depend>
  <depend>planning_msgs</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>visualization_msgs</depend>

</package>
