<?xml version="1.0"?>
<package format="2">
  <name>euroc_task4</name>
  <version>0.0.0</version>
  <description>
      EuRoC stage2 - task 4
  </description>
  <maintainer email="burrimi@ethz.ch">Michael Burri</maintainer>
  <maintainer email="ztaylor@ethz.ch">Zachary Taylor</maintainer>
  <maintainer email="helen.oleynikova@mavt.ethz.ch">Helen Oleynikova</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>euroc_stage2_common</depend>
  <depend>geometry_msgs</depend>
  <depend>mav_msgs</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>octomap</depend>
  <depend>octomap_msgs</depend>
  <depend>octomap_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>dynamicEDT3D</depend>
</package>
