<?xml version="1.0"?>
<package>
  <name>euroc_hex_description</name>
  <version>0.0.1</version>
  <description>The euroc_hex_description package</description>

  <maintainer email="fadri.furrer@mavt.ethz.ch">Fadri Furrer</maintainer>

  <author>Fadri Furrer</author>
  <author>Michael Burri</author>
  <author>Mina Kamel</author>
  <author>Janosch Nikolic</author>
  <author>Markus Achtelik</author>

  <license>ASL 2.0</license>

  <url type="website">https://github.com/ethz-asl/euroc_simulator/wiki</url>

  <author email="ffurrer@gmail.com">Fadri Furrer</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rotors_simulator</run_depend>
</package>
